--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-sanitizer": "^1.0.6",
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "mysql": "^2.18.1"
